--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,22 +6,54 @@
 
 </head>
 <body>
-	<h1>Caesar</h1>
+	<div class="container theme-showcase" role="main">
 
-	<div ng-controller="CaesarController as caesar">
-		<label>alphabet</label>
-		<div ng-init="alphabet = 'abcdefghijklmnopqrstuvwxyz'">
-			<select ng-model="caesar.alphabet">
-				<option value="abcdefghijklmnopqrstuvwxyz">Latin (abcdefghijklmnopqrstuvwxyz)</option>
-				<option value="abcdefghijklmnñopqrstuvwxyz">Español (abcdefghijklmnñopqrstuvwxyz)</option>
-			</select>
+		<div class="jumbotron">
+			<h1>Caesar</h1>
+			<p>
+				This is a web where you can encode and decode with classic mehtode <a
+					href="https://en.wikipedia.org/wiki/Caesar_cipher"> Caesar cipher</a>
+			</p>
 		</div>
 
-		<label>input:</label> <input type="text" ng-model="caesar.text" class="input" required /> <input type="number"
-			min="0" ng-model="caesar.swift" class="input" required /> <input type="button" ng-click="caesar.encode()"
-			class="submit" value="encode" />
 
-		<div class="output">->{{ caesar.encoded }}</div>
+		<div ng-controller="CaesarController as caesar">
+
+
+			
+				<div class="form-group">
+					<label for="alphabet">Alphabet</label>
+					<div ng-init="alphabet = 'Latin (abcdefghijklmnopqrstuvwxyz)'" required>
+						<select ng-model="caesar.alphabet" class="form-control" id="alphabet">
+							<option value="abcdefghijklmnopqrstuvwxyz">Latin (abcdefghijklmnopqrstuvwxyz)</option>
+							<option value="abcdefghijklmnñopqrstuvwxyz">Spanish (abcdefghijklmnñopqrstuvwxyz)</option>
+							<option value="abcdefghijklmnñopqrstuvwxyz">German (aäbßcdefghijklmnñoöpqrstuüvwxyz)</option>
+						</select>
+					</div>
+
+				</div>
+				<div class="form-group">
+					<label for="text">Text:</label>
+					<textarea ng-model="caesar.text" class="form-control" id="text" placeholder="Text" required> </textarea>
+				</div>
+				
+				<div class="form-group">
+					<label for="swift">Swift</label> <input type="number" ng-model="caesar.swift" class="form-control" min="0"
+						required>
+				</div>
+				<input type="button" ng-click="caesar.encode()" class="btn btn-default" value="Encode"></input>
+			
+<br>
+			<div class="form-group">
+				<label for="encoded">result</label> 
+				<textarea ng-model="caesar.encoded" class="form-control" id="encoded"  required> </textarea>
+			</div>
+
+
+
+
+			
+		</div>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.js"></script>
@@ -32,7 +64,7 @@
 						'$http',
 						function($http) {
 							var self = this;
-							
+
 							self.encode = function() {
 								console.log('before call');
 								var url = '/caesar/encode?' + 'alphabet='
